add script to automate connection.json creation to blockchain-b

--- a/fabric/blockchain-b/config/configtx.yaml
+++ b/fabric/blockchain-b/config/configtx.yaml
@@ -68,7 +68,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: PrudentialMSP
 
-        MSPDir: ../organizations/peerOrganizations/prudential.co.id/msp
+        MSPDir: ../organizations/peerOrganizations/prudential.aaui.org/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -92,7 +92,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.prudential.co.id
+            - Host: peer0.prudential.aaui.org
               Port: 7051
 
     - &Manulife
@@ -103,7 +103,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: ManulifeMSP
 
-        MSPDir: ../organizations/peerOrganizations/manulife.co.id/msp
+        MSPDir: ../organizations/peerOrganizations/manulife.aaui.org/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -126,7 +126,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.manulife.co.id
+            - Host: peer0.manulife.aaui.org
               Port: 8051
 
     - &Allianz
@@ -137,7 +137,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: AllianzMSP
 
-        MSPDir: ../organizations/peerOrganizations/allianz.co.id/msp
+        MSPDir: ../organizations/peerOrganizations/allianz.aaui.org/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -160,7 +160,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.allianz.co.id
+            - Host: peer0.allianz.aaui.org
               Port: 9051
 
 ################################################################################
