add fabric sdk only for each network

--- a/fabric/bc-hospital/addOrg3/docker/docker-compose-couch-org3.yaml
+++ b/fabric/bc-hospital/addOrg3/docker/docker-compose-couch-org3.yaml
@@ -3,11 +3,11 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-version: '2.1'
+version: "2.1"
 
 networks:
   test:
-    name: fabric_test
+    name: hospital_network
 
 services:
   couchdb4:
