--- a/fabric/bc-hospital/addOrg3/docker/docker-compose-ca-org3.yaml
+++ b/fabric/bc-hospital/addOrg3/docker/docker-compose-ca-org3.yaml
@@ -3,14 +3,13 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-version: '2.1'
+version: "2.1"
 
 networks:
   test:
-    name: fabric_test
+    name: hospital_network
 
 services:
-
   ca_org3:
     image: hyperledger/fabric-ca:latest
     environment:
