--- a/fabric/bc-insurance/addOrg6/docker/docker-compose-org6.yaml
+++ b/fabric/bc-insurance/addOrg6/docker/docker-compose-org6.yaml
@@ -10,7 +10,7 @@ volumes:
 
 networks:
   test:
-    name: fabric_test
+    name: insurance_network
 
 services:
   peer0.org6.example.com:
@@ -19,7 +19,7 @@ services:
     environment:
       #Generic peer variables
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_test
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=insurance_network
       - FABRIC_LOGGING_SPEC=INFO
       #- FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_TLS_ENABLED=true
