--- a/scripts/cross-chain/package.json
+++ b/scripts/cross-chain/package.json
@@ -11,6 +11,8 @@
     "license": "Apache-2.0",
     "dependencies": {
         "fabric-ca-client": "^2.2.4",
-        "fabric-network": "^2.2.4"
+        "fabric-network": "^2.2.4",
+        "mongoose": "^8.1.0",
+        "pg": "^8.11.3"
     }
 }
