--- a/fabric/bc-hospital/organizations/ccp-template.yaml
+++ b/fabric/bc-hospital/organizations/ccp-template.yaml
@@ -16,7 +16,7 @@ organizations:
       - ca.org${ORG}.hospital.com
 peers:
   peer0.org${ORG}.hospital.com:
-    url: grpcs://localhost:${P0PORT}
+    url: grpcs://10.42.10.132:${P0PORT}
     tlsCACerts:
       pem: |
         ${PEERPEM}
@@ -25,7 +25,7 @@ peers:
       hostnameOverride: peer0.org${ORG}.hospital.com
 certificateAuthorities:
   ca.org${ORG}.hospital.com:
-    url: https://localhost:${CAPORT}
+    url: https://10.42.10.132:${CAPORT}
     caName: ca-org${ORG}
     tlsCACerts:
       pem:
