--- a/fabric/bc-insurance/organizations/fabric-ca/org4/fabric-ca-server-config.yaml
+++ b/fabric/bc-insurance/organizations/fabric-ca/org4/fabric-ca-server-config.yaml
@@ -40,7 +40,7 @@
 version: 1.2.0
 
 # Server's listening port (default: 7054)
-port: 7010
+port: 7111
 
 # Enables debug logging (default: false)
 debug: false
@@ -80,7 +80,7 @@ tls:
 #############################################################################
 ca:
   # Name of this CA
-  name: ARSADACA
+  name: Org4CA
   # Key file (is only used to import a private key into BCCSP)
   keyfile:
   # Certificate file (default: ca-cert.pem)
@@ -237,10 +237,10 @@ ldap:
 # which are always stored in lower case.
 #############################################################################
 affiliations:
-  org1:
+  org4:
     - department1
     - department2
-  org2:
+  org5:
     - department1
 
 #############################################################################
@@ -301,16 +301,16 @@ signing:
 #     CA certificates though it can still issue end entity certificates.
 ###########################################################################
 csr:
-  cn: ca.hospital.com
+  cn: ca.org4.insurance.com
   names:
     - C: US
-      ST: "New York"
-      L: "New York"
-      O: hospital.com
+      ST: "North Carolina"
+      L: "Durham"
+      O: org4.insurance.com
       OU:
   hosts:
-    - 10.42.10.132
-    - hospital.com
+    - 10.42.10.131
+    - org4.insurance.com
   ca:
     expiry: 131400h
     pathlength: 1
